--- a/project/src/main/res/values-it/strings.xml
+++ b/project/src/main/res/values-it/strings.xml
@@ -3,27 +3,21 @@
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
-    <string name="search_all_hint">Cerca destinazioni e luoghi di interesse</string>
-    <!-- Hint in edit text that the user should type in an origin (location) -->
-    <string name="origins_hint">Cerca località di partenza…</string>
-    <!-- String when we don't know where the user is coming from/going to -->
-    <string name="great_unknown">Sconosciuto</string>
+    <string name="search_all_hint">Inserisci la tua destinazione</string>
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">Vola da %1$s</string>
     <!-- Fly from… -->
     <string name="Fly_from_dot_dot_dot">Vola da…</string>
     <!-- Select dates - used for the Calendar. Must be "proper case" -->
     <string name="select_dates_proper_case">Seleziona date</string>
-    <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
-    <string name="choose_dates">Scegli le date</string>
     <!-- Hotels Tonight -->
     <string name="hotels_tonight">Hotel per stanotte</string>
     <!-- Missing flight info message -->
     <string name="missing_flight_info_message_TEMPLATE">Per sfogliare i voli verso %s, facci sapere da dove vuoi partire.</string>
     <!-- Missing flight info message -->
     <string name="missing_flight_trip_date_message">Inserisci una data o una combinazione di date valide.</string>
-    <!-- Message for no GDE results, or GDE not available on this POS -->
-    <string name="Set_dates_for_flights_to_X_TEMPLATE">Inserisci date per\nvoli a %s</string>
+    <!-- Message for missing dates -->
+    <string name="missing_dates_flight_TEMPLATE">Per cercare i tuoi voli per %s,\nindica quando vorresti partire.</string>
     <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
     <string name="flight_trends_missing_origin">Per scoprire i trend sui prezzi dei voli,\nindica da dove vuoi partire.</string>
     <!-- Denotes the start date of the trip -->
@@ -35,27 +29,7 @@
     <!-- Button text for when flight origin is missing -->
     <string name="missing_flight_info_button_prompt">Seleziona l\&apos;aeroporto</string>
 
-    <!-- Calendar picker strings -->
-    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
-    <string name="cd_month_previous_TEMPLATE">%s mese precedente</string>
-    <!-- Accessibility string describing calendar header. This is for the current month label. %s is the month, e.g. "September current month" -->
-    <string name="cd_month_current_TEMPLATE">%s mese corrente</string>
-    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go forward one month. %s is the month, e.g. "September next month" -->
-    <string name="cd_month_next_TEMPLATE">%s mese successivo</string>
-    <!-- Accessibility string describing days of the week.  %s is the number (of the day), %2$s is the day.  E.g. "Day 3, Tuesday"-->
-    <string name="cd_day_of_week_TEMPLATE">Giorno %1$s, %2$s</string>
-    <!-- Accessibility string describing days on a calendar.  This is a day that is selected (but not the start or end).  %s is the day, e.g. "September 3 in trip" -->
-    <string name="cd_day_selected_TEMPLATE">%s in viaggio</string>
-    <!-- Accessibility string describing days on a calendar.  This is first selected day.  %s is the day, e.g. "September 3 start date" -->
-    <string name="cd_day_selected_start_TEMPLATE">%s data di partenza</string>
-    <!-- Accessibility string describing days on a calendar.  This is last selected day.  %s is the day, e.g. "September 3 end date" -->
-    <string name="cd_day_selected_end_TEMPLATE">%s data di ritorno</string>
-    <!-- Accessibility string describing days on a calendar.  This is a day displayed, but not valid for selection (due to being too early/late).  %s is the day, e.g. "September 3 not selectable" -->
-    <string name="cd_day_invalid_TEMPLATE">%s non selezionabile</string>
-
     <!-- Tablet Results strings -->
-    <!-- Resulsts label -->
-    <string name="results">Risultati</string>
     <!-- Sort & Filter label -->
     <string name="Sort_and_Filter">Ordina e filtra</string>
     <!-- "Done" list header label -->
@@ -119,16 +93,10 @@
     <string name="trip_bucket_label_flight_roundtrip">Volo di andata e ritorno per %1$s</string>
     <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
     <string name="trip_bucket_label_flight_trip">Volo per %1$s</string>
-    <!-- Loading Hotels and Flights… -->
-    <string name="loading_hotels_and_flights">Caricamento di hotel e voli in corso…</string>
-    <!-- Flight fare calendar header for a list of dates to fly -->
-    <string name="when_to_fly">Andata</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="flight_trends">Tendenze di volo</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">Ritorno</string>
-    <!-- Waypoint fail message for when no suggestion is available. -->
-    <string name="waypoint_suggestion_fail">Nessuna informazione sulla geolocalizzazione disponibile. Modifica la ricerca e riprova.</string>
     <!-- Tablet search results, no hotels available -->
     <string name="tablet_search_results_hotels_unavailable">Spiacenti, nessun hotel \n disponibile al momento.</string>
     <!-- Tablet search results, no hotels available TONIGHT -->
@@ -280,8 +248,6 @@
     <string name="now_booking_TEMPLATE">Prenotazione in corso: &lt;b&gt;%1$s&lt;/b&gt;</string>
     <!-- room and bed type template (e.g. "Premium Room, One King Bed") -->
     <string name="room_and_bed_type_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt;, %2$s</string>
-    <!-- Template for a string that describes a hotel stay, example: "August 8 - 10 (2 nights)" -->
-    <string name="dates_and_nights_TEMPLATE">%1$s (%2$s)</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
@@ -397,8 +363,6 @@
     <string name="find_itinerary_pound">Trova n. itinerario</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">Itinerario Expedia n.</string>
-    <!-- Travelocity Itinerary -->
-    <string name="tvly_itinerary">Itinerario Travelocity n.</string>
     <!-- Elite plus customer support -->
     <string name="elite_plus_customer_support">Assistenza clienti Elite Plus</string>
     <!-- No upcoming trips -->
@@ -847,8 +811,6 @@
     <string name="share_template_long_hotel_4_phone">Telefono\n%s</string>
     <!-- App download link -->
     <string name="share_template_long_ad">Prenota hotel, voli e visualizza e condividi i tuoi itinerari. Scarica subito l\&apos;app Expedia per dispositivi mobili.\n%s</string>
-    <!-- Travelocity App download link -->
-    <string name="share_template_long_ad_tvly">Prenota hotel, voli e visualizza e condividi i tuoi itinerari. Scarica subito l\&apos;app gratuita di Travelocity per dispositivi mobili.\n%s</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Volerò a %1$s in data %2$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1146,6 +1108,8 @@
     <string name="airline_processing_fee_TEMPLATE">Commissione applicata dalla compagnia aerea ai pagamenti con questa carta: &lt;b&gt;%1$s&lt;/b&gt;</string>
     <!-- Airline does not accept <Credit Card Brand> (e.g. "Airline does not accept Visa") -->
     <string name="airline_does_not_accept_cardtype_TEMPLATE">La compagnia aerea non accetta pagamenti con %1$s.</string>
+    <!-- Hotel does not accept <Credit Card Brand> (e.g. "Hotel does not accept Visa") -->
+    <string name="hotel_does_not_accept_cardtype_TEMPLATE">L\&apos;hotel non accetta pagamenti con %1$s</string>
     <!-- Debit cards not supported message -->
     <string name="debit_cards_not_accepted">Non si accettano carte di debito.</string>
 
@@ -1182,6 +1146,8 @@
     <string name="airline_card_fee_select_TEMPLATE">La compagnia aerea addebita una commissione di %1$s per l\&apos;utilizzo di %2$s.</string>
     <!-- Message shown to user when they can't use their credit card to book with the airline, %1$s is the credit card brand. e.g. "The airline does not support VISA." -->
     <string name="airline_card_not_supported_TEMPLATE">La compagnia aerea non supporta %1$s.</string>
+    <!-- Message shown to user when they can't use their credit card to book with the airline, but when we don't know the type of the card -->
+    <string name="airline_card_not_supported_generic">La compagnia aerea non supporta questo tipo di carta di credito.</string>
 
     <!-- Checkout Activity -->
     <!-- Checkout Information label -->
@@ -1338,7 +1304,7 @@
     <!-- Address line 1 hint -->
     <string name="address_line_one_hint">Indirizzo 1</string>
     <!-- Address line 2 hint -->
-    <string name="address_line_two_hint">Indirizzo 2</string>
+    <string name="address_line_two_hint">Indirizzo 2 (facoltativo)</string>
     <!-- Address city hint -->
     <string name="address_city_hint">Città</string>
     <!-- Address state hint -->
@@ -1412,8 +1378,6 @@
     <!-- Traveler Info spinner values -->
     <!-- None -->
     <string name="none">Nessuna</string>
-    <!-- Gender name template e.g. Chris is Male -->
-    <string name="gender_name_TEMPLATE">&lt;font color="#919191"&gt;%1$s è&lt;/font&gt; %2$s</string>
 
     <!-- Traveler options activity -->
     <!-- Select a traveler -->
@@ -1550,23 +1514,21 @@
     <string name="error_flight_price_increased">La compagnia aerea ha appena aumentato il prezzo del tuo biglietto di %1$s.  Acconsenti al pagamento del nuovo importo totale di %2$s?</string>
     <!-- Error shown to user if the flight's price has decreased since they last checked.  %1$s is the difference in price, %2$s is the new total, both are cash (e.g. "$5.99"). -->
     <string name="error_flight_price_decreased">Abbiamo appena trovato un\&apos;offerta per il volo che hai richiesto a %1$s in meno. Acconsenti all\&apos;addebito del nuovo importo totale di %2$s?</string>
-    <!-- Error shown to user if the flight's airline adds a payment processinge fee.  %1$s is the fee, %2$s is the new total, both are cash (e.g. "$5.99") -->
+    <!-- Error shown to user if the flight's airline adds a payment processing fee.  %1$s is the fee, %2$s is the new total, both are cash (e.g. "$5.99") -->
     <string name="error_flight_added_processing_fee">La compagnia aerea applica una commissione per la gestione del pagamento di %1$s. Acconsenti al pagamento del nuovo importo totale di %2$s?</string>
-    <!-- Error shown to user if the flight's airline adds a payment processinge fee and the flight's price has increased since we last checked.  %1$s is the fee, %2$s is the price increase, and %3$s is the new total; all are cash (e.g. "$5.99") -->
+    <!-- Error shown to user if the flight's airline adds a payment processing fee and the flight's price has increased since we last checked.  %1$s is the fee, %2$s is the price increase, and %3$s is the new total; all are cash (e.g. "$5.99") -->
     <string name="error_flight_price_increased_with_fee">La compagnia aerea applica una commissione per la gestione del pagamento pari a %1$s e ha aumentato il prezzo del tuo biglietto di %2$s. Acconsenti al pagamento del nuovo importo totale di %3$s?</string>
-    <!-- Error shown to user if the flight's airline adds a payment processinge fee and the flight's price has decrased since we last checked.  %1$s is the fee, %2$s is the price decrease, and %3$s is the new total; all are cash (e.g. "$5.99") -->
+    <!-- Error shown to user if the flight's airline adds a payment processing fee and the flight's price has decreased since we last checked.  %1$s is the fee, %2$s is the price decrease, and %3$s is the new total; all are cash (e.g. "$5.99") -->
     <string name="error_flight_price_decreased_with_fee">La compagnia aerea applica una commissione per la gestione del pagamento di %1$s, tuttavia il prezzo dei voli richiesti è diminuito di %2$s. Acconsenti al pagamento del nuovo importo totale di %3$s?</string>
     <!-- Error shown to user if their credit card number is invalid -->
     <string name="error_invalid_card_number">I dati della carta di credito non sono corretti. Riprova.</string>
     <!-- Error shown to user if their name on card is invalid -->
     <string name="error_name_on_card_mismatch">Il nome del titolare della carta inserito non corrispondere a quello indicato sulla carta di credito. Riprova.</string>
-    <!-- Error shown to user if their credit card has expired -->
-    <string name="error_expired_payment">La carta di credito che hai tentato di utilizzare è scaduta: utilizza una carta di credito diversa.</string>
     <!-- Error shown to user if they attempt to book with an individual under 18 which is unsupported -->
     <string name="error_booking_with_minor">Siamo spiacenti, al momento non è possibile effettuare prenotazioni per i minori di 18 anni.</string>
-    <!-- Error shown to user if we don't know what exaclty what went wrong. -->
+    <!-- Error shown to user if we don't know what exactly what went wrong. -->
     <string name="error_flight_unhandled">Spiacenti, non è possibile elaborare l\&apos;ordine in questo momento. Riprova.</string>
-    <!-- Error shown to user if we don't know what exaclty what went wrong.  %s is the itinerary users can quote to allow agents to pull up their case. -->
+    <!-- Error shown to user if we don't know what exactly what went wrong.  %s is the itinerary users can quote to allow agents to pull up their case. -->
     <string name="error_flight_unhandled_TEMPLATE">Spiacenti, non è possibile elaborare l\&apos;ordine in questo momento. Riprova o contatta l\&apos;assistenza clienti Expedia e comunica questo numero di itinerario: %s</string>
     <!-- Error shown to user if their flight is no longer available (sold out, session expired, whatever) -->
     <string name="error_flight_no_longer_available_expedia">Spiacenti, il tuo volo non è più disponibile su Expedia.</string>
@@ -1791,8 +1753,6 @@
     <string name="please_try_a_different_location_or_date">Scegliere una località o una data diverse.</string>
     <!-- Message displayed when no hotel rooms are available -->
     <string name="error_no_hotel_rooms_available">Nessuna camera disponibile</string>
-    <!-- Message displayed when the hotel room is sold out -->
-    <string name="error_room_is_now_sold_out_expedia">Spiacenti, questa camera non è più disponibile su Expedia.</string>
     <!-- Message displayed when all the hotel rooms at a hotel are sold out -->
     <string name="error_hotel_is_now_sold_out_expedia">Spiacenti, questo hotel non è più disponibile su Expedia.</string>
 
@@ -2060,8 +2020,7 @@
     <string name="itinerary_number">Itinerario n.</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
     <string name="contact_phone_template">Se hai domande sulla tua prenotazione, chiama Expedia al numero%s .</string>
-    <!-- Travelocity- Contact info for a country with a known support line where %s represents the phone number -->
-    <string name="contact_phone_template_tvly">Se hai domande sulla tua prenotazione, chiama Travelocity al numero %s.</string>
+
 
     <!-- Rate template strings -->
     <!-- Label for the taxes and fees for a hotel room booking. -->
@@ -2070,8 +2029,6 @@
     <string name="included">Incluse</string>
     <!-- Label for the "Mandatory Fees" (bait & switch fees) -->
     <string name="MandatoryFees">Tasse e tariffe (da pagare in hotel)</string>
-    <!-- Label for "check out" information. Used both as header for check out policies and for the date of check out. -->
-    <string name="CheckOut">Partenza</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Sconto</string>
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
@@ -2112,8 +2069,6 @@
     <string name="logged_in_as">Login come</string>
     <!-- Label for signin screen -->
     <string name="expedia_account">Account Expedia</string>
-    <!-- Label for signin screen -->
-    <string name="vsc_account">Account VSC</string>
     <!-- Label for loading user profile from expedia.com -->
     <string name="loading_expedia_account">Caricamento Account Expedia</string>
     <!-- Label for password recovery -->
@@ -2221,7 +2176,7 @@
     <!-- String where we link to the google play services open source licenses -->
     <string name="open_source_software_licenses">Licenze del software open source</string>
     <!-- String for acrediting the open source libraries we use -->
-    <string name="this_app_makes_use_of_the_following">Questa applicazione si serve delle seguenti biblioteche open-source:</string>
+    <string name="this_app_makes_use_of_the_following">Questa applicazione si serve delle seguenti librerie open source:</string>
 
     <!-- App support WebView -->
     <!-- menu -->
@@ -2416,7 +2371,6 @@
     <string name="country_ck">Isole Cook</string>
     <string name="country_cr">Costa Rica</string>
     <string name="country_hr">Croazia</string>
-    <string name="country_cu">Cuba</string>
     <string name="country_cy">Cipro</string>
     <string name="country_cz">Repubblica Ceca</string>
     <string name="country_ci">Costa d\&apos;Avorio</string>
@@ -2607,7 +2561,6 @@
     <string name="country_zm">Zambia</string>
     <string name="country_zw">Zimbabwe</string>
     <string name="country_ax">Isole Åland</string>
-    <string name="country_vs">VSC</string>
 
     <!-- Google Wallet -->
     <!-- The merchant name to display to the user for Google Wallet -->
@@ -2770,19 +2723,13 @@
     <string name="VSC_Voyages_SNF">Voyages-SNCF</string>
     <!-- Description for FT Free app -->
     <string name="VSC_Voyages_SNF_description">Applicazione Voyages-sncf.com</string>
-    <!-- VSC Copyright information -->
-    <string name="VSC_copyright">© Copyright 2012-2014 Agence Voyages-SNCF, Inc.\nTutti i diritti riservati.</string>
-    <!-- VSC app name -->
-    <string name="VSC_app_name">VSC Hotels</string>
-    <!-- Link to open when VSC logo is clicked on -->
-    <string name="app_vsc_info_url">http://www.voyages-sncf.com/</string>
 
     <!-- Content Description Labels -->
     <!-- Expedia Bookings Launch Screen -->
-    <!-- Content description for action: Press button to launch Expedia Hotels -->
-    <string name="cd_launch_hotels">Avvia hotel Expedia</string>
-    <!-- Content description for action: Press button to launch Expedia Flights -->
-    <string name="cd_launch_flights">Avvia voli Expedia</string>
+    <!-- Content description for action: Press button to launch Hotels -->
+    <string name="cd_launch_hotels">Cerca hotel</string>
+    <!-- Content description for action: Press button to launch Flights -->
+    <string name="cd_launch_flights">Cerca voli</string>
     <!-- Content description for action: Press button to open menu list -->
     <string name="cd_launch_open_menu_list">Apri l\&apos;elenco menu</string>
     <!-- Content description for action: Open Settings Menu -->
