--- a/project/src/main/res/values-nl/strings.xml
+++ b/project/src/main/res/values-nl/strings.xml
@@ -3,27 +3,21 @@
 
     <!-- Tablet search strings -->
     <!-- Hint asking users to search for anything -->
-    <string name="search_all_hint">Bestemmingen en bezienswaardigheden zoeken</string>
-    <!-- Hint in edit text that the user should type in an origin (location) -->
-    <string name="origins_hint">Zoek naar vertrekplaatsen …</string>
-    <!-- String when we don't know where the user is coming from/going to -->
-    <string name="great_unknown">Een groot mysterie</string>
+    <string name="search_all_hint">Voer je bestemming in</string>
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">Vlieg vanaf %1$s</string>
     <!-- Fly from… -->
     <string name="Fly_from_dot_dot_dot">Vlieg vanaf…</string>
     <!-- Select dates - used for the Calendar. Must be "proper case" -->
     <string name="select_dates_proper_case">Datums selecteren</string>
-    <!-- Choose dates. Used in tablet calendar, when flights are not supported for certain POS -->
-    <string name="choose_dates">Datums kiezen</string>
     <!-- Hotels Tonight -->
     <string name="hotels_tonight">Hotels voor vandaag</string>
     <!-- Missing flight info message -->
     <string name="missing_flight_info_message_TEMPLATE">Vertel ons vanaf waar je vliegt om vluchten naar %s te bekijken.</string>
     <!-- Missing flight info message -->
     <string name="missing_flight_trip_date_message">Kies een geldige datum of periode.</string>
-    <!-- Message for no GDE results, or GDE not available on this POS -->
-    <string name="Set_dates_for_flights_to_X_TEMPLATE">Kies datums voor\nvluchten naar %s</string>
+    <!-- Message for missing dates -->
+    <string name="missing_dates_flight_TEMPLATE">Vertel ons waar je naartoe wilt vliegen om door vluchten naar %s te bladeren.\n</string>
     <!-- Message to show on Flight Trends (GDE) fragment when no origin city was specified -->
     <string name="flight_trends_missing_origin">Vertel ons vanaf waar je vliegt\nzodat we vluchtprijstrends kunnen ophalen</string>
     <!-- Denotes the start date of the trip -->
@@ -35,27 +29,7 @@
     <!-- Button text for when flight origin is missing -->
     <string name="missing_flight_info_button_prompt">Kies luchthaven</string>
 
-    <!-- Calendar picker strings -->
-    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
-    <string name="cd_month_previous_TEMPLATE">Vorige maand - %s</string>
-    <!-- Accessibility string describing calendar header. This is for the current month label. %s is the month, e.g. "September current month" -->
-    <string name="cd_month_current_TEMPLATE">Huidige maand - %s</string>
-    <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go forward one month. %s is the month, e.g. "September next month" -->
-    <string name="cd_month_next_TEMPLATE">Volgende maand - %s</string>
-    <!-- Accessibility string describing days of the week.  %s is the number (of the day), %2$s is the day.  E.g. "Day 3, Tuesday"-->
-    <string name="cd_day_of_week_TEMPLATE">Dag %1$s, %2$s</string>
-    <!-- Accessibility string describing days on a calendar.  This is a day that is selected (but not the start or end).  %s is the day, e.g. "September 3 in trip" -->
-    <string name="cd_day_selected_TEMPLATE">Op reis - %s</string>
-    <!-- Accessibility string describing days on a calendar.  This is first selected day.  %s is the day, e.g. "September 3 start date" -->
-    <string name="cd_day_selected_start_TEMPLATE">Startdatum - %s</string>
-    <!-- Accessibility string describing days on a calendar.  This is last selected day.  %s is the day, e.g. "September 3 end date" -->
-    <string name="cd_day_selected_end_TEMPLATE">Einddatum - %s</string>
-    <!-- Accessibility string describing days on a calendar.  This is a day displayed, but not valid for selection (due to being too early/late).  %s is the day, e.g. "September 3 not selectable" -->
-    <string name="cd_day_invalid_TEMPLATE">Niet selecteerbaar - %s</string>
-
     <!-- Tablet Results strings -->
-    <!-- Resulsts label -->
-    <string name="results">Resultaten</string>
     <!-- Sort & Filter label -->
     <string name="Sort_and_Filter">Sorteer &amp; Filter</string>
     <!-- "Done" list header label -->
@@ -119,16 +93,10 @@
     <string name="trip_bucket_label_flight_roundtrip">Retourvlucht naar %1$s</string>
     <!-- Tablet Trip bucket Flight text - One way Trip. %1$s <destination city> -->
     <string name="trip_bucket_label_flight_trip">Vlucht naar %1$s</string>
-    <!-- Loading Hotels and Flights… -->
-    <string name="loading_hotels_and_flights">Hotels en vluchten aan het laden …</string>
-    <!-- Flight fare calendar header for a list of dates to fly -->
-    <string name="when_to_fly">Vluchtdatums</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="flight_trends">Vluchttrends</string>
     <!-- Flight fare calendar header for return flights -->
     <string name="when_to_return">Terugvluchten</string>
-    <!-- Waypoint fail message for when no suggestion is available. -->
-    <string name="waypoint_suggestion_fail">Geen locatiegegevens gevonden! Pas je zoekopdracht aan en probeer het opnieuw.</string>
     <!-- Tablet search results, no hotels available -->
     <string name="tablet_search_results_hotels_unavailable">Sorry, er zijn momenteel \n geen hotels beschikbaar.</string>
     <!-- Tablet search results, no hotels available TONIGHT -->
@@ -280,8 +248,6 @@
     <string name="now_booking_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt; wordt nu geboekt</string>
     <!-- room and bed type template (e.g. "Premium Room, One King Bed") -->
     <string name="room_and_bed_type_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt;, %2$s</string>
-    <!-- Template for a string that describes a hotel stay, example: "August 8 - 10 (2 nights)" -->
-    <string name="dates_and_nights_TEMPLATE">%1$s (%2$s)</string>
 
     <!-- Facebook -->
     <!-- Weve found your user account -->
@@ -397,8 +363,6 @@
     <string name="find_itinerary_pound">Reisplannr. zoeken</string>
     <!-- Expedia Itinerary -->
     <string name="expedia_itinerary">Expedia reisplannr.</string>
-    <!-- Travelocity Itinerary -->
-    <string name="tvly_itinerary">Travelocity Reisplannr.</string>
     <!-- Elite plus customer support -->
     <string name="elite_plus_customer_support">Elite Plus klantenservice</string>
     <!-- No upcoming trips -->
@@ -847,8 +811,6 @@
     <string name="share_template_long_hotel_4_phone">Telefoon\n%s</string>
     <!-- App download link -->
     <string name="share_template_long_ad">Boek hotels, vluchten en bekijk &amp; deel je reisplannen. Download vandaag nog de gratis Expedia mobiele app.\n%s</string>
-    <!-- Travelocity App download link -->
-    <string name="share_template_long_ad_tvly">Boek hotels, vluchten en bekijk &amp; deel je reisplannen. Download vandaag nog de gratis mobiele app van Travelocity.\n%s</string>
     <!-- 1: city 2: date string -->
     <string name="share_template_subject_flight">Ik vlieg op %2$s naar %1$s</string>
     <!-- 1: travelerName 2: city 3: date string -->
@@ -1146,6 +1108,8 @@
     <string name="airline_processing_fee_TEMPLATE">Transactiekosten airline: &lt;b&gt;%1$s&lt;/b&gt;</string>
     <!-- Airline does not accept <Credit Card Brand> (e.g. "Airline does not accept Visa") -->
     <string name="airline_does_not_accept_cardtype_TEMPLATE">Airline aanvaardt geen %1$s</string>
+    <!-- Hotel does not accept <Credit Card Brand> (e.g. "Hotel does not accept Visa") -->
+    <string name="hotel_does_not_accept_cardtype_TEMPLATE">Hotels aanvaardt geen %1$s</string>
     <!-- Debit cards not supported message -->
     <string name="debit_cards_not_accepted">Betaalpassen worden niet aanvaard.</string>
 
@@ -1182,6 +1146,8 @@
     <string name="airline_card_fee_select_TEMPLATE">De airline berekent een toeslag van %1$s voor betalingen met %2$s.</string>
     <!-- Message shown to user when they can't use their credit card to book with the airline, %1$s is the credit card brand. e.g. "The airline does not support VISA." -->
     <string name="airline_card_not_supported_TEMPLATE">De airline ondersteunt %1$s niet.</string>
+    <!-- Message shown to user when they can't use their credit card to book with the airline, but when we don't know the type of the card -->
+    <string name="airline_card_not_supported_generic">De airline accepteert dit creditcardmerk niet.</string>
 
     <!-- Checkout Activity -->
     <!-- Checkout Information label -->
@@ -1338,7 +1304,7 @@
     <!-- Address line 1 hint -->
     <string name="address_line_one_hint">Adreslijn 1</string>
     <!-- Address line 2 hint -->
-    <string name="address_line_two_hint">Adreslijn 2</string>
+    <string name="address_line_two_hint">Adreslijn 2 (optioneel)</string>
     <!-- Address city hint -->
     <string name="address_city_hint">Stad</string>
     <!-- Address state hint -->
@@ -1412,8 +1378,6 @@
     <!-- Traveler Info spinner values -->
     <!-- None -->
     <string name="none">Geen</string>
-    <!-- Gender name template e.g. Chris is Male -->
-    <string name="gender_name_TEMPLATE">&lt;font color="#919191"&gt;%1$s is&lt;/font&gt; %2$s</string>
 
     <!-- Traveler options activity -->
     <!-- Select a traveler -->
@@ -1550,23 +1514,21 @@
     <string name="error_flight_price_increased">Het lijkt erop dat de airline de prijs van je vlucht verhoogd heeft met %1$s Ga je akkoord met het nieuwe totaalbedrag van %2$s?</string>
     <!-- Error shown to user if the flight's price has decreased since they last checked.  %1$s is the difference in price, %2$s is the new total, both are cash (e.g. "$5.99"). -->
     <string name="error_flight_price_decreased">We hebben net je aangevraagde vluchten gevonden voor %1$s minder. Ga je akkoord met het nieuwe totaalbedrag van %2$s?</string>
-    <!-- Error shown to user if the flight's airline adds a payment processinge fee.  %1$s is the fee, %2$s is the new total, both are cash (e.g. "$5.99") -->
+    <!-- Error shown to user if the flight's airline adds a payment processing fee.  %1$s is the fee, %2$s is the new total, both are cash (e.g. "$5.99") -->
     <string name="error_flight_added_processing_fee">Het lijkt erop dat de airline een betalingstoeslag van %1$s in rekening brengt. Ga je akkoord met het nieuwe totaalbedrag van %2$s?</string>
-    <!-- Error shown to user if the flight's airline adds a payment processinge fee and the flight's price has increased since we last checked.  %1$s is the fee, %2$s is the price increase, and %3$s is the new total; all are cash (e.g. "$5.99") -->
+    <!-- Error shown to user if the flight's airline adds a payment processing fee and the flight's price has increased since we last checked.  %1$s is the fee, %2$s is the price increase, and %3$s is the new total; all are cash (e.g. "$5.99") -->
     <string name="error_flight_price_increased_with_fee">Het lijkt erop dat de airline een betalingstoeslag van %1$s in rekening brengt en net de prijs van je vlucht verhoogd heeft met %2$s. Ga je akkoord met het nieuwe totaalbedrag van %3$s?</string>
-    <!-- Error shown to user if the flight's airline adds a payment processinge fee and the flight's price has decrased since we last checked.  %1$s is the fee, %2$s is the price decrease, and %3$s is the new total; all are cash (e.g. "$5.99") -->
+    <!-- Error shown to user if the flight's airline adds a payment processing fee and the flight's price has decreased since we last checked.  %1$s is the fee, %2$s is the price decrease, and %3$s is the new total; all are cash (e.g. "$5.99") -->
     <string name="error_flight_price_decreased_with_fee">Het lijkt erop dat de airline een betalingstoeslag van %1$s in rekening brengt maar dat je aangevraagde vluchten net worden aangeboden voor %2$s minder. Ga je akkoord met het nieuwe totaalbedrag van %3$s?</string>
     <!-- Error shown to user if their credit card number is invalid -->
     <string name="error_invalid_card_number">Het ingevoerde creditcardnummer is ongeldig, probeer het opnieuw.</string>
     <!-- Error shown to user if their name on card is invalid -->
     <string name="error_name_on_card_mismatch">De ingevoerde naam van de kaarthouder stemt niet overeen met de naam op de creditcard. Probeer het opnieuw.</string>
-    <!-- Error shown to user if their credit card has expired -->
-    <string name="error_expired_payment">De creditcard die je wil gebruiken is verlopen, gebruik een nieuwe creditcard.</string>
     <!-- Error shown to user if they attempt to book with an individual under 18 which is unsupported -->
     <string name="error_booking_with_minor">Helaas, boekingen voor kinderen onder 18 jaar is nog niet mogelijk.</string>
-    <!-- Error shown to user if we don't know what exaclty what went wrong. -->
+    <!-- Error shown to user if we don't know what exactly what went wrong. -->
     <string name="error_flight_unhandled">Het spijt ons, we kunnen je boeking momenteel niet verwerken. Probeer het opnieuw.</string>
-    <!-- Error shown to user if we don't know what exaclty what went wrong.  %s is the itinerary users can quote to allow agents to pull up their case. -->
+    <!-- Error shown to user if we don't know what exactly what went wrong.  %s is the itinerary users can quote to allow agents to pull up their case. -->
     <string name="error_flight_unhandled_TEMPLATE">Het spijt ons, we kunnen je boeking momenteel niet verwerken. Probeer het opnieuw of bel de Expedia klantenservice en geef het volgende reisplannummer op: %s</string>
     <!-- Error shown to user if their flight is no longer available (sold out, session expired, whatever) -->
     <string name="error_flight_no_longer_available_expedia">Helaas, je vlucht is niet meer beschikbaar bij Expedia.</string>
@@ -1791,8 +1753,6 @@
     <string name="please_try_a_different_location_or_date">Probeer een andere locatie of datum.</string>
     <!-- Message displayed when no hotel rooms are available -->
     <string name="error_no_hotel_rooms_available">Geen kamers beschikbaar</string>
-    <!-- Message displayed when the hotel room is sold out -->
-    <string name="error_room_is_now_sold_out_expedia">Helaas, deze kamer is niet meer vrij bij Expedia.</string>
     <!-- Message displayed when all the hotel rooms at a hotel are sold out -->
     <string name="error_hotel_is_now_sold_out_expedia">Helaas, dit hotel is niet meer beschikbaar bij Expedia.</string>
 
@@ -2060,8 +2020,7 @@
     <string name="itinerary_number">Reisplannr.</string>
     <!-- Contact info for a country with a known support line where %s represents the phone number -->
     <string name="contact_phone_template">Als je vragen hebt over je boeking, bel Expedia op %s.</string>
-    <!-- Travelocity- Contact info for a country with a known support line where %s represents the phone number -->
-    <string name="contact_phone_template_tvly">Bel Travelocity op %s als je vragen hebt over je boeking.</string>
+
 
     <!-- Rate template strings -->
     <!-- Label for the taxes and fees for a hotel room booking. -->
@@ -2070,8 +2029,6 @@
     <string name="included">Inbegrepen</string>
     <!-- Label for the "Mandatory Fees" (bait & switch fees) -->
     <string name="MandatoryFees">Hoteltoeslagen (te betalen in het hotel)</string>
-    <!-- Label for "check out" information. Used both as header for check out policies and for the date of check out. -->
-    <string name="CheckOut">Check-out</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Korting</string>
     <!-- Label indicating that the taxes for a hotel room booking is unknown (as returned from API) -->
@@ -2112,8 +2069,6 @@
     <string name="logged_in_as">Aangemeld als</string>
     <!-- Label for signin screen -->
     <string name="expedia_account">Expedia account</string>
-    <!-- Label for signin screen -->
-    <string name="vsc_account">VSC-account</string>
     <!-- Label for loading user profile from expedia.com -->
     <string name="loading_expedia_account">Bezig met laden van Expedia-account</string>
     <!-- Label for password recovery -->
@@ -2416,7 +2371,6 @@
     <string name="country_ck">Cookeilanden</string>
     <string name="country_cr">Costa Rica</string>
     <string name="country_hr">Kroatië</string>
-    <string name="country_cu">Cuba</string>
     <string name="country_cy">Cyprus</string>
     <string name="country_cz">Tsjechië</string>
     <string name="country_ci">Ivoorkust</string>
@@ -2607,7 +2561,6 @@
     <string name="country_zm">Zambia</string>
     <string name="country_zw">Zimbabwe</string>
     <string name="country_ax">Ålandseilanden</string>
-    <string name="country_vs">VSC</string>
 
     <!-- Google Wallet -->
     <!-- The merchant name to display to the user for Google Wallet -->
@@ -2770,19 +2723,13 @@
     <string name="VSC_Voyages_SNF">Voyages-SNCF</string>
     <!-- Description for FT Free app -->
     <string name="VSC_Voyages_SNF_description">Voyages-sncf.com applicatie</string>
-    <!-- VSC Copyright information -->
-    <string name="VSC_copyright">© Copyright 2012-2014 Agence Voyages-SNCF, Inc.\nAlle rechten voorbehouden</string>
-    <!-- VSC app name -->
-    <string name="VSC_app_name">VSC Hotels</string>
-    <!-- Link to open when VSC logo is clicked on -->
-    <string name="app_vsc_info_url">http://www.voyages-sncf.com/</string>
 
     <!-- Content Description Labels -->
     <!-- Expedia Bookings Launch Screen -->
-    <!-- Content description for action: Press button to launch Expedia Hotels -->
-    <string name="cd_launch_hotels">Open Expedia Hotels</string>
-    <!-- Content description for action: Press button to launch Expedia Flights -->
-    <string name="cd_launch_flights">Open Expedia Vluchten</string>
+    <!-- Content description for action: Press button to launch Hotels -->
+    <string name="cd_launch_hotels">Hotels zoeken</string>
+    <!-- Content description for action: Press button to launch Flights -->
+    <string name="cd_launch_flights">Vluchten zoeken</string>
     <!-- Content description for action: Press button to open menu list -->
     <string name="cd_launch_open_menu_list">Open menulijst</string>
     <!-- Content description for action: Open Settings Menu -->
